@@ -32,7 +32,12 @@
 
 #ifdef WITH_MHASH
 #include <mhash.h>
-#define HASH_MHASH_COUNT MHASH_WHIRLPOOL /* WHIRLPOOL == 22 on 2006-10-11 */
+
+#ifdef HAVE_MHASH_WHIRLPOOL
+# define HASH_MHASH_COUNT MHASH_WHIRLPOOL /* WHIRLPOOL == 22 on 2006-10-11 */
+#else
+# define HASH_MHASH_COUNT MHASH_RIPEMD320
+#endif
 #define MHASH_RMD160 MHASH_RIPEMD160
 #define MHASH_HAVAL MHASH_HAVAL256
 #endif
